refactoring + calculate likelyhood + parse filename to acquire chainid and contract addres

--- a/AbiParser.csproj
+++ b/AbiParser.csproj
@@ -9,16 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Nethereum.Util" Version="4.8.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="contract1.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="contract2.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="contract3.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="contract4.json">
