json deserialization cannot be polymorphic

--- a/Ultimate4ByteDb/Server/Ultimate4ByteDb.Server.csproj
+++ b/Ultimate4ByteDb/Server/Ultimate4ByteDb.Server.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.8" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
   </ItemGroup>
 
   <ItemGroup>
