--- a/Ultimate4ByteDb/Client/Ultimate4ByteDb.Client.csproj
+++ b/Ultimate4ByteDb/Client/Ultimate4ByteDb.Client.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Blazored.FluentValidation" Version="2.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="6.0.16" />
   </ItemGroup>
 
   <ItemGroup>
